@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3175 2019/07/31 19:32:49 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3176 2019/07/31 19:34:35 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5132,3 +5132,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated cad/qcad to 3.23.0.0 [plunky 2019-07-31]
 	Updated math/R-genetics to 1.3.8.1.2 [brook 2019-07-31]
 	Updated math/R-geoR to 1.7.5.2.1 [brook 2019-07-31]
+	Updated math/R-geoRglm to 0.9.11 [brook 2019-07-31]
